tests/negative/semantic/return_type_mismatch/input.ci
int f() {
    return "hello";
}
void main() {}
